[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cherry-files-picker"
description = "Move files from a source branch to a target branch and create a single, clean commit"
version = "2026.0.1"
readme = "README.md"
authors = [{name = "Nelson Urrutia"}]
license = { file = "LICENSE" }
keywords = ["git", "version-control","developer-tools", "cli" ]
dependencies = ["questionary"]



[project.scripts]
cherry-files-picker = "cherry_files_picker.main:main"
